Exercise04/Lesson/Calc.output
Grammar

    0 $accept: Calc $end

    1 Calc: Expr

    2 Expr: Term
    3     | Expr '+' Term
    4     | Expr '-' Term

    5 Term: Fact
    6     | Term '*' Fact
    7     | Term '/' Fact

    8 Fact: NUMBER
    9     | '(' Expr ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9
')' (41) 9
'*' (42) 6
'+' (43) 3
'-' (45) 4
'/' (47) 7
error (256)
NUMBER (258) 8


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
Calc (11)
    on left: 1, on right: 0
Expr (12)
    on left: 2 3 4, on right: 1 3 4 9
Term (13)
    on left: 5 6 7, on right: 2 3 4 6 7
Fact (14)
    on left: 8 9, on right: 5 6 7


State 0

    0 $accept: . Calc $end

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    Calc  go to state 3
    Expr  go to state 4
    Term  go to state 5
    Fact  go to state 6


State 1

    8 Fact: NUMBER .

    $default  reduce using rule 8 (Fact)


State 2

    9 Fact: '(' . Expr ')'

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    Expr  go to state 7
    Term  go to state 5
    Fact  go to state 6


State 3

    0 $accept: Calc . $end

    $end  shift, and go to state 8


State 4

    1 Calc: Expr .
    3 Expr: Expr . '+' Term
    4     | Expr . '-' Term

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10

    $default  reduce using rule 1 (Calc)


State 5

    2 Expr: Term .
    6 Term: Term . '*' Fact
    7     | Term . '/' Fact

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 2 (Expr)


State 6

    5 Term: Fact .

    $default  reduce using rule 5 (Term)


State 7

    3 Expr: Expr . '+' Term
    4     | Expr . '-' Term
    9 Fact: '(' Expr . ')'

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10
    ')'  shift, and go to state 13


State 8

    0 $accept: Calc $end .

    $default  accept


State 9

    3 Expr: Expr '+' . Term

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    Term  go to state 14
    Fact  go to state 6


State 10

    4 Expr: Expr '-' . Term

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    Term  go to state 15
    Fact  go to state 6


State 11

    6 Term: Term '*' . Fact

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    Fact  go to state 16


State 12

    7 Term: Term '/' . Fact

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    Fact  go to state 17


State 13

    9 Fact: '(' Expr ')' .

    $default  reduce using rule 9 (Fact)


State 14

    3 Expr: Expr '+' Term .
    6 Term: Term . '*' Fact
    7     | Term . '/' Fact

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 3 (Expr)


State 15

    4 Expr: Expr '-' Term .
    6 Term: Term . '*' Fact
    7     | Term . '/' Fact

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 4 (Expr)


State 16

    6 Term: Term '*' Fact .

    $default  reduce using rule 6 (Term)


State 17

    7 Term: Term '/' Fact .

    $default  reduce using rule 7 (Term)
